--- a/8.koa/public/dir1/index.html
+++ b/8.koa/public/dir1/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-  <h1>标题</h1>
-  <p>单行文本</p>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Document</title>
+	</head>
+	<body>
+		<h1>标题</h1>
+		<p>单行文本</p>
+		<form action="/form" method="POST" enctype="application/x-www-form-urlencoded">
+			用户名: <input type="text" name="username" /> <br />
+			密码: <input type="password" name="password" /> <br />
+			<button type="submit">登录</button>
+		</form>
+	</body>
 </html>
